# beluga_journey

./: README.md  pyproject.toml  requirements.txt
capstone/: entry_script.py  register_deploy.ipynb  train.py
capstone/_trainer/: conda.yaml  deployment.ipynb  sample-data-credit.json  sample-data-insurance.json  simulate_traffic.ipynb  train-credit.py
capstone/credit_default/: Capstone-Credit-EDA.ipynb
capstone/credit_default/dataset/: credit_default.csv  credit_default_1.csv  credit_default_2.csv
capstone/insurance/: Capstone-Insurance-EDA.ipynb
mlops_fundamentals/: 0.1-scikit-learn-manual.ipynb  0.2-scikit-learn-mlflow-file.ipynb  0.3-scikit-learn-mlflow-server.ipynb
mlops_fundamentals/Instructions/: 02-Explore-Azure-Machine-Learning.md  02-Explore-developer-tools.md  03-Make-data-available.md  04-Work-with-compute.md  04-Work-with-environments.md  05-Designer-train-model.md  06-AutoML-classification-model.md  07-Notebooks-mlflow-tracking.md  08-Script-command-job.md  08-Script-mlflow-tracking.md  09-Hyperparameter-tuning.md  09-Run-pipelines.md  10-Create-explore-responsible-ai-dashboard.md  10-Log-mlflow-models.md  11-Deploy-batch-endpoint.md  11-Deploy-online-endpoint.md
responsible_ai/bias_and_fairness/: exercise_1_Bias_Detection_and_Mitigation.ipynb  exercise_2_Fairness_Metrics.ipynb
responsible_ai/security_and_privacy/: exercise_1_Anonymization.ipynb  exercise_2_Encryption.ipynb  exercise_3a_Differential_Privacy_Randomized_Response.ipynb  exercise_3b_Differential_Privacy_Laplace_Mechanism.ipynb  exercise_5_Poisoned_Samples.ipynb
(+4 files in other folders)
