[project]
name = "beluga-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "cryptography>=46.0.5",
    "fairlearn>=0.13.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
